--- a/lib/armbian-configng/config.ng.jobs.json
+++ b/lib/armbian-configng/config.ng.jobs.json
@@ -435,11 +435,21 @@
                                 "src_reference": "",
                                 "author": "Igor Pecovnik",
                                 "condition": ""
+                            },
+                            {
+                                "id": "N14",
+                                "description": "Display status",
+                                "command": [ "show_message <<< \"$(sudo netplan status)\"" ],
+                                "status": "Active",
+                                "doc_link": "",
+                                "src_reference": "",
+                                "author": "Igor Pecovnik",
+                                "condition": ""
                             }
                             ]
                 },
                 {
-                    "id": "N14",
+                    "id": "N15",
                     "description": "Install Bluetooth support",
                     "command": [
                         "see_current_apt ",
@@ -453,7 +463,7 @@
                     "condition": "! check_if_installed bluetooth && ! check_if_installed bluez && ! check_if_installed bluez-tools"
                 },
                 {
-                    "id": "N15",
+                    "id": "N16",
                     "description": "Remove Bluetooth support",
                     "command": [
                         "see_current_apt ",
@@ -468,7 +478,7 @@
                     "condition": "check_if_installed bluetooth || check_if_installed bluez || check_if_installed bluez-tools"
                 },
                 {
-                    "id": "N16",
+                    "id": "N17",
                     "description": "Bluetooth Discover",
                     "prompt": "This will enable bluetooth and discover devices\n\nWould you like to continue?",
                     "command": [ "connect_bt_interface" ],
@@ -479,7 +489,7 @@
                     "condition": "check_if_installed bluetooth || check_if_installed bluez || check_if_installed bluez-tools"
                 },
                 {
-                    "id": "N17",
+                    "id": "N18",
                     "description": "Toggle system IPv6/IPv4 internet protocol",
                     "prompt": "This will toggle your internet protocol\nWould you like to continue?",
                     "command": [ "toggle_ipv6 | show_infobox" ],
