--- a/lib/armbian-configng/config.ng.jobs.json
+++ b/lib/armbian-configng/config.ng.jobs.json
@@ -250,7 +250,7 @@
                         "export BASHLOCATION=$(grep /bash$ /etc/shells | tail -1)",
                         "sed -i \"s|^SHELL=.*|SHELL=${BASHLOCATION}|\" /etc/default/useradd",
                         "sed -i \"s|^DSHELL=.*|DSHELL=${BASHLOCATION}|\" /etc/adduser.conf",
-                        "debconf-apt-progress -- apt-get -y purge armbian-zsh",
+                        "apt_install_wrapper apt-get -y purge armbian-zsh zsh-common zsh tmux",
                         "update_skel",
                         "awk -F'[/:]' '{if ($3 >= 1000 && $3 != 65534 || $3 == 0) print $1}' /etc/passwd | xargs -L1 chsh -s $(grep /bash$ /etc/shells | tail -1)"
                     ],
@@ -267,7 +267,7 @@
                         "export ZSHLOCATION=$(grep /zsh$ /etc/shells | tail -1)",
                         "sed -i \"s|^SHELL=.*|SHELL=${ZSHLOCATION}|\" /etc/default/useradd",
                         "sed -i \"s|^DSHELL=.*|DSHELL=${ZSHLOCATION}|\" /etc/adduser.conf",
-                        "debconf-apt-progress -- apt-get -y install armbian-zsh",
+                        "apt_install_wrapper apt-get -y install armbian-zsh zsh-common zsh tmux",
                         "update_skel",
                         "awk -F'[/:]' '{if ($3 >= 1000 && $3 != 65534 || $3 == 0) print $1}' /etc/passwd | xargs -L1 chsh -s $(grep /zsh$ /etc/shells | tail -1)"
                     ],
@@ -724,7 +724,7 @@
                     "src_reference": "",
                     "author": "",
                     "condition": "[ -f /usr/bin/armbianmonitor ]"
-        
+
                 }
             ]
         },
