Adjust package dependencies - needed for bare cloud images used in automation

--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -21,7 +21,7 @@ jobs:
       homepage: "https://www.armbian.com"
       section: "default"
       priority: "optional"
-      depends: "bash, jq, whiptail"
+      depends: "bash, jq, whiptail, sudo, procps, systemd, lsb-release, iproute2"
       description: "Configng"
 
     secrets:
