Bugfix: enable linter on bash files, not just executables ones

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,6 +4,10 @@ on:
   workflow_dispatch:
   pull_request:
 
+concurrency:
+  group: linter-${{github.event.pull_request.number}}
+  cancel-in-progress: true
+
 jobs:
 
   Shellcheck:
@@ -23,7 +27,7 @@ jobs:
          shell: bash {0}
          run: |
 
-           for file in $(find . -type f -executable ! -path '*/.git*/*' -exec grep -Iq . {} \; -print); do
+           for file in $(find . -name "*.sh" ! -path '*/.git*/*' -exec grep -Iq . {} \; -print); do
                if grep -qE "^#\!/.*bash" $file; then
                    shellcheck --severity=error $file || ret=$?
                fi
